Bug 451881 - Dbus activation in desktop file breaks starting minimized in system tray
Summary: Dbus activation in desktop file breaks starting minimized in system tray
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.03.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-25 10:41 UTC by Antonio Rojas
Modified: 2022-03-26 21:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2022-03-25 10:41:37 UTC
The dbus activation stuff added to the desktop file in 22.04 breaks the option to start the application minimized in the system tray. The application window is always displayed on startup (only if launching from the desktop file, not from the command line).

Filed for kwalletmanager, but this affects other applications with similar changes which support starting minimized: at least konversation is affected too.
Comment 1 Friedrich W. H. Kossebau 2022-03-26 21:09:18 UTC
Git commit e1391cb3ab7eaf929989e7954180daff3b9c7566 by Friedrich W. H. Kossebau.
Committed on 26/03/2022 at 21:09.
Pushed by kossebau into branch 'release/22.04'.

kwalletmanager: do not show window on activation if not already shown

M  +8    -3    src/manager/kwalletmanager.cpp

https://invent.kde.org/utilities/kwalletmanager/commit/e1391cb3ab7eaf929989e7954180daff3b9c7566
Comment 2 Friedrich W. H. Kossebau 2022-03-26 21:13:08 UTC
Going now for konversation & Co. to see if there is a fix possible, or if DBusActivatable behaviour pattern is not compatible with existing config options.