kwalletmanager: do not show window on activation if not already shown

BUG: 451881